# OpenHarmony_Seetaface2

./: BUILD.gn  README.md  bundle.json
FaceDetector/: BUILD.gn
FaceLandmarker/: BUILD.gn
FaceRecognizer/: BUILD.gn
FaceTracker/: BUILD.gn
QualityAssessor/: BUILD.gn
SeetaNet/: BUILD.gn
